<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_clr"
    tools:context=".SearchDog">


    <ImageView
        android:id="@+id/image_dogo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/idogo_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_2659_white" />

    <LinearLayout
        android:id="@+id/linearLayoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_sml6"
            android:fontFamily="@font/fredericka_the_great"
            android:hint="@string/type_a_breed"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="3dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutText">

    </ListView>


    <LinearLayout
        android:id="@+id/id_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutText">

        <LinearLayout
            android:id="@+id/linearLayout_image_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_style"
            android:padding="5dp"
            tools:visibility="invisible">

            <ImageView
                android:id="@+id/image_switcher_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/slideshow_imageview"
                android:padding="5dp"
                android:scaleType="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutText">

            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutButtonLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/submit_btn_search_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_sml1"
                android:fontFamily="@font/fredericka_the_great"
                android:onClick="onSubmitSearch"
                android:text="@string/submit_button"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/stop_button_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button_sml4"
                android:fontFamily="@font/fredericka_the_great"
                android:onClick="onStopButton"
                android:text="@string/stop"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>